[package]
authors = ["Evgenii Lepikhin <johnlepikhin@gmail.com>"]
name = "markdown-ppp"
version = "2.7.1"
edition = "2021"
license = "MIT"
description = "Feature-rich Markdown Parsing and Pretty-Printing library"
repository = "https://github.com/johnlepikhin/markdown-ppp"
categories = ["parsing", "text-processing"]
keywords = ["markdown", "parser", "pretty-print", "format"]
documentation = "https://docs.rs/markdown-ppp"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entities = { version = "1.0.1", optional = true }
nom = { version = "8.0.0", default-features = false, features = ["alloc"], optional = true }
pretty = { version = "0.12.4", optional = true }
regex = { version = "1.0", optional = true }
serde = { version = "1.0.219", features = ["serde_derive"], optional = true }
unicode_categories = { version = "0.1.1", optional = true }

[dev-dependencies]
rstest = "0.25"
serde_json = "1.0"

[features]
default = ["parser", "printer", "html-printer"]
parser = ["entities", "nom", "unicode_categories"]
ast-serde = ["serde"]
ast-specialized = []
printer = ["pretty", "regex"]
html-printer = ["pretty"]
latex-printer = ["pretty"]
typst-printer = ["pretty"]
ast-transform = []
